--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t 99Percent/docker-react -f Dockerfile.dev .
+  - docker build -t 99percent/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run 99Percent/docker-react npm run test -- --coverage
+  - docker run 99percent/docker-react npm run test -- --coverage
